@@ -88,13 +88,13 @@ class AudioViewHelper extends \TYPO3\CMS\Fluid\Core\ViewHelper\AbstractViewHelpe
 				$value = '<input type="image" alt="' . $translator->render('click_here_accessible') . '"'
 					. ' title="' . $translator->render('click_here_accessible') . '"'
 					. ' src="' . $siteURL . str_replace(PATH_site, '', \TYPO3\CMS\Core\Utility\GeneralUtility::getFileAbsFileName($settings['accessibleOutputImage'])) . '"'
-					. ' onclick="playCaptcha(\'' . $fakeId . '\', \'' . $audioURL . '\', \'' . $translator->render('noPlayMessage') . '\');return false;" style="cursor: pointer;"'
+					. ' onclick="' . $this->extensionName . '.playCaptcha(\'' . $fakeId . '\', \'' . $audioURL . '\', \'' . $translator->render('noPlayMessage') . '\');return false;" style="cursor: pointer;"'
 					. $this->getClassAttribute('image-accessible', $suffix) . ' />'
 					. '<span' . $this->getClassAttribute('accessible') . ' id="tx_srfreecap_captcha_playAudio_' . $fakeId . '"></span>';
 			} else {
 				$value = '<span id="tx_srfreecap_captcha_playLink_' . $fakeId . '"'
 					. $this->getClassAttribute('accessible-link', $suffix) . '>' . $translator->render('click_here_accessible_before_link') 
-					. '<a onClick="playCaptcha(\'' . $fakeId.'\', \'' . $audioURL . '\', \'' . $translator->render('noPlayMessage') . '\');" style="cursor: pointer;" title="' . $translator->render('click_here_accessible') . '">'
+					. '<a onClick="' . $this->extensionName . '.playCaptcha(\'' . $fakeId.'\', \'' . $audioURL . '\', \'' . $translator->render('noPlayMessage') . '\');" style="cursor: pointer;" title="' . $translator->render('click_here_accessible') . '">'
 					. $translator->render('click_here_accessible_link') . '</a>'
 					. $translator->render('click_here_accessible_after_link') . '</span>'
 					. '<span ' . $this->getClassAttribute('accessible', $suffix) . ' id="tx_srfreecap_captcha_playAudio_'  . $fakeId . '"></span>';
