@@ -1,6 +1,7 @@
 2013-02-11  Stanislas Rolland  <typo3@sjbr.ca>
 
 	* Update the manual
+	* Namespace the JavaScript functions
 
 2013-02-07  Stanislas Rolland  <typo3@sjbr.ca>
 
